# marsos

./: .gitignore  Cargo.toml  README.md  build.rs  machine
.cargo/: config.toml
boot/: qemu
src/: allocator.rs  batch.rs  config.rs  entry.asm  gdt.rs  interrupts.rs  lang_items.rs  lib.rs  linker.ld  loader.rs  logging.rs  main.rs  memory.rs  sbi.rs  serial.rs  test.S  timer.rs  vga_buffer.rs
src/boards/: qemu.rs
src/memory_map/: frame_allocator.rs  mod.rs
src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  page_table.rs
src/sync/: up.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/task/: __switch.S  context.rs  mod.rs  switch.rs  task.rs
src/trap/: context.rs  mod.rs  trap.S
targets/: riscv_64.json
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
