[package]
name = "marsos"
version = "0.1.0"
edition = "2021"

authors = ["Ronan Zhan <ronan.zhan@gmail.com>"]
keywords = ["marsos", "mars", "os", "rust", "riscv"]
readme = "README.md"
homepage = "https://github.com/ronanzhan/marsos/wiki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }



[package.metadata.bootimage]



